May need them/Ingress/04easyvalues-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easyvalues-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"

spec:
  tls:
  - hosts:
    - auth.capidattex.net
    - org.capidattex.net
    - api.capidattex.net
    - easyvalues.capidattex.net
    - evtest.capidattex.net
    - loo.capidattex.net
    - pro.capidattex.net
    - ban.capidattex.net
    - sal.capidattex.net
    - loa.capidattex.net
    - acc.capidattex.net
    - exp.capidattex.net
    secretName: letsencrypt-prod
  rules:
    - host: auth.capidattex.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: keycloak
                port:
                  number: 80

    - host: org.capidattex.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: organisation
                port:
                  number: 80                
    
    - host: api.capidattex.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: servicegateway
                port:
                  number: 80

    - host: easyvalues.capidattex.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: easyvalues
                port:
                  number: 80
    - host: evtest.capidattex.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: easyvalues
                port:
                  number: 80          
   
    - host: loo.capidattex.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: lookup
                port:
                  number: 80

 

    - host: ban.capidattex.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: banking
                port:
                  number: 80
    
    - host: pro.capidattex.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: profile
                port:
                  number: 80
    - host: loa.capidattex.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: loan
                port:
                  number: 80
    - host: sal.capidattex.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sales
                port:
                  number: 80
    - host: acc.capidattex.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: accounting
                port:
                  number: 80
   
    - host: exp.capidattex.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: expenses
                port:
                  number: 80
  
    


                  
# kubectl apply -f Ingress/easyvalues-ingress.yml
